<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/dp_size_24"
        android:layout_height="@dimen/dp_size_16"
        android:layout_margin="@dimen/dp_size_24"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="@dimen/dp_size_250"
        android:layout_height="@dimen/dp_size_250"
        android:rotation="180"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_0"
        android:layout_marginTop="@dimen/dp_size_32"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image">

        <TextView
            android:id="@+id/phn_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_size_24"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginEnd="@dimen/dp_size_24"
            android:text="@string/india_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_size_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_size_24"
            android:layout_marginTop="@dimen/dp_size_8"
            android:layout_marginEnd="@dimen/dp_size_24"
            android:background="@color/black" />

        <EditText
            android:id="@+id/phn_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_size_24"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginEnd="@dimen/dp_size_24"
            android:background="@null"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_size_24"
            android:layout_marginTop="@dimen/dp_size_8"
            android:layout_marginEnd="@dimen/dp_size_24"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_size_24"
            android:layout_marginTop="@dimen/dp_size_24"
            android:layout_marginEnd="@dimen/dp_size_24"
            android:gravity="center"
            android:text="@string/info_text"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/sp_size_16" />

        <androidx.cardview.widget.CardView
            android:id="@+id/next"
            android:layout_width="@dimen/dp_size_70"
            android:layout_height="@dimen/dp_size_70"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_size_32"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="@dimen/dp_size_150"
            app:cardElevation="@dimen/dp_size_16">

            <ImageView
                android:layout_width="@dimen/dp_size_24"
                android:layout_height="@dimen/dp_size_32"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_size_32"
                android:rotation="180"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <include
        android:id="@+id/splash_container"
        layout="@layout/splash" />


</androidx.constraintlayout.widget.ConstraintLayout>